--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,13 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:36:08.371794Z",
+     "start_time": "2024-10-23T12:35:50.821683Z"
+    }
+   },
    "source": [
     "%pip install --upgrade --quiet langchain langchain-community"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -60,23 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:36:56.106332Z",
+     "start_time": "2024-10-23T12:36:56.067602Z"
+    }
+   },
    "source": [
-    "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
-   ]
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv('LANGCHAIN_API_KEY')"
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
    "id": "7ec6409b-21e5-4d0a-8a46-c4ef0b055dd3",
    "metadata": {},
    "source": [
-    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide.\n",
+    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling/) guide.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -89,15 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:50:12.441066Z",
+     "start_time": "2024-10-23T12:50:07.923529Z"
+    }
+   },
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
-   ]
+    "model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv('OPENAI_API_KEY'))"
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -111,25 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--\n",
-      "multiply\n",
-      "Multiply two numbers together.\n",
-      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
-      "--\n",
-      "add\n",
-      "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:50:27.421080Z",
+     "start_time": "2024-10-23T12:50:27.368013Z"
     }
-   ],
+   },
    "source": [
     "from langchain_core.tools import tool\n",
     "\n",
@@ -154,28 +167,48 @@
     "    print(t.name)\n",
     "    print(t.description)\n",
     "    print(t.args)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--\n",
+      "multiply\n",
+      "Multiply two numbers together.\n",
+      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "--\n",
+      "add\n",
+      "Add two numbers.\n",
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "be77e780",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:51:12.197803Z",
+     "start_time": "2024-10-23T12:51:12.182728Z"
+    }
+   },
+   "source": "multiply.invoke({\"x\": 7, \"y\": 8})",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20.0"
+       "56.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "multiply.invoke({\"x\": 4, \"y\": 5})"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -189,9 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:51:18.455820Z",
+     "start_time": "2024-10-23T12:51:18.441711Z"
+    }
+   },
+   "source": [
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.tools import render_text_description\n",
+    "\n",
+    "rendered_tools = render_text_description(tools)\n",
+    "print(rendered_tools)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -202,21 +247,17 @@
      ]
     }
    ],
-   "source": [
-    "from langchain_core.output_parsers import JsonOutputParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.tools import render_text_description\n",
-    "\n",
-    "rendered_tools = render_text_description(tools)\n",
-    "print(rendered_tools)"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:52:08.349683Z",
+     "start_time": "2024-10-23T12:52:08.342562Z"
+    }
+   },
    "source": [
     "system_prompt = f\"\"\"\\\n",
     "You are an assistant that has access to the following set of tools. \n",
@@ -234,28 +275,19 @@
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [(\"system\", system_prompt), (\"user\", \"{input}\")]\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:53:14.191977Z",
+     "start_time": "2024-10-23T12:53:13.249641Z"
     }
-   ],
+   },
    "source": [
     "chain = prompt | model\n",
     "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
@@ -266,7 +298,25 @@
     "    print(message)\n",
     "else:  # Otherwise it's a chat model\n",
     "    print(message.content)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -280,27 +330,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:53:24.373972Z",
+     "start_time": "2024-10-23T12:53:23.548668Z"
     }
-   ],
+   },
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
     "chain = prompt | model | JsonOutputParser()\n",
     "chain.invoke({\"input\": \"what's thirteen times 4\"})"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -330,10 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:28:14.750959Z",
+     "start_time": "2024-10-23T13:28:14.741132Z"
+    }
+   },
    "source": [
     "from typing import Any, Dict, Optional, TypedDict\n",
     "\n",
@@ -366,7 +424,9 @@
     "    name = tool_call_request[\"name\"]\n",
     "    requested_tool = tool_name_to_tool[name]\n",
     "    return requested_tool.invoke(tool_call_request[\"arguments\"], config=config)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -378,9 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:28:18.856629Z",
+     "start_time": "2024-10-23T13:28:18.846011Z"
+    }
+   },
+   "source": [
+    "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 5}})"
+   ],
    "outputs": [
     {
      "data": {
@@ -388,14 +455,12 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 5}})"
-   ]
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -409,9 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:28:32.447304Z",
+     "start_time": "2024-10-23T13:28:31.449844Z"
+    }
+   },
+   "source": [
+    "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+   ],
    "outputs": [
     {
      "data": {
@@ -419,15 +492,12 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
-   ]
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -441,9 +511,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:28:42.119300Z",
+     "start_time": "2024-10-23T13:28:41.055101Z"
+    }
+   },
+   "source": [
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "chain = (\n",
+    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
+    ")\n",
+    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+   ],
    "outputs": [
     {
      "data": {
@@ -453,19 +535,12 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "chain = (\n",
-    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
-    ")\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
-   ]
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -483,6 +558,178 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:36:24.991656Z",
+     "start_time": "2024-10-23T13:36:24.096138Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "chain.invoke({\"input\": \"what's 5 minus 3\"})",
+   "id": "f81557fddc0d9405",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 5, 'y': -3}, 'output': 2}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "I'm suprised. it used the add function correctly to calculate the substraction",
+   "id": "501229f3d7374d8e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:36:35.615140Z",
+     "start_time": "2024-10-23T13:36:34.764913Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "chain.invoke({\"input\": \"what's five plus ten\"})",
+   "id": "74666eba86e4ca82",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 5, 'y': 10}, 'output': 15}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "It handles also only texts correctly",
+   "id": "7e212ffd53396c9b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:33:01.498800Z",
+     "start_time": "2024-10-23T13:33:00.526350Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "chain.invoke({\"input\": \"what's 一 plus 六\"})",
+   "id": "631fbbd6f32d61c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'add', 'arguments': {'x': 1, 'y': 6}, 'output': 7}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "It handle also japanese names",
+   "id": "747175841d158ce4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:34:24.875132Z",
+     "start_time": "2024-10-23T13:34:23.772236Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "chain.invoke({\"input\": \"5 * 5\"})",
+   "id": "dd651d2f19c1de76",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply', 'arguments': {'x': 5.0, 'y': 5.0}, 'output': 25.0}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:34:53.897091Z",
+     "start_time": "2024-10-23T13:34:52.692606Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "chain.invoke({\"input\": \"10 / 3\"})",
+   "id": "aa7b63240efa80b7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'multiply',\n",
+       " 'arguments': {'x': 10, 'y': 0.3333333333333333},\n",
+       " 'output': 3.333333333333333}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Division is also no problem for it",
+   "id": "48431027d5594d58"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T13:39:29.665988Z",
+     "start_time": "2024-10-23T13:39:28.694911Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "try:\n",
+    "  chain.invoke({\"input\": \"a / v\"})\n",
+    "except:\n",
+    "  print('The input parameter could not be parsed.')  "
+   ],
+   "id": "8355c260474c5339",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input parameter could not be parsed.\n"
+     ]
+    }
+   ],
+   "execution_count": 27
   }
  ],
  "metadata": {
