--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
     "import getpass\n",
     "import os\n",
     "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()"
    ]
   },
   {
@@ -89,14 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.llms import Ollama\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=os.getenv('OPENAI_API_KEY'))"
    ]
   },
   {
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,23 +167,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
+   "id": "0ecea5a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--\n",
+      "multiply\n",
+      "Multiply two numbers together.\n",
+      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "--\n",
+      "add\n",
+      "Add two numbers.\n",
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n",
+      "--\n",
+      "area_rectangle\n",
+      "Calculate the area of a rectangle, given the length of both sides.\n",
+      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "--\n",
+      "area_square\n",
+      "Calculate the area of a square, given the length of the sides.\n",
+      "{'x': {'title': 'X', 'type': 'number'}}\n",
+      "--\n",
+      "area_circle\n",
+      "Calculate the area of a circle, given the radius r.\n",
+      "{'r': {'title': 'R', 'type': 'number'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "# Creating 3 new tools\n",
+    "@tool\n",
+    "def area_rectangle(x: float, y: float) -> float:\n",
+    "    \"\"\"Calculate the area of a rectangle, given the length of both sides.\"\"\"\n",
+    "    return x * y\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def area_square(x: float) -> float:\n",
+    "    \"Calculate the area of a square, given the length of the sides.\"\n",
+    "    return x * x\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def area_circle(r: float) -> float:\n",
+    "    \"Calculate the area of a circle, given the radius r.\"\n",
+    "    return math.pi * r ** 2\n",
+    "\n",
+    "tools = [multiply, add, area_rectangle, area_square, area_circle]\n",
+    "\n",
+    "# Let's inspect the tools\n",
+    "for t in tools:\n",
+    "    print(\"--\")\n",
+    "    print(t.name)\n",
+    "    print(t.description)\n",
+    "    print(t.args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n",
+      "12.566370614359172\n"
+     ]
     }
    ],
    "source": [
-    "multiply.invoke({\"x\": 4, \"y\": 5})"
+    "print(multiply.invoke({\"x\": 4, \"y\": 5}))\n",
+    "\n",
+    "print(area_circle.invoke({\"r\": 2}))"
    ]
   },
   {
@@ -189,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -198,7 +270,10 @@
      "output_type": "stream",
      "text": [
       "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
+      "add(x: int, y: int) -> int - Add two numbers.\n",
+      "area_rectangle(x: float, y: float) -> float - Calculate the area of a rectangle, given the length of both sides.\n",
+      "area_square(x: float) -> float - Calculate the area of a square, given the length of the sides.\n",
+      "area_circle(r: float) -> float - Calculate the area of a circle, given the radius r.\n"
      ]
     }
    ],
@@ -213,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,11 +322,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -280,17 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +463,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +494,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +528,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,6 +540,69 @@
     "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
     ")\n",
     "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "def1c353",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'area_square', 'arguments': {'x': 3}, 'output': 9.0}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"what's the area of a square with length 3cm\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "7ef32eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'area_circle', 'arguments': {'r': 10}, 'output': 314.1592653589793}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"what's the area of a circle with radius 10\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "75084821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'area_rectangle', 'arguments': {'x': 5, 'y': 8}, 'output': 40.0}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"input\": \"what's the area of a rectangle with length 5 and 8\"})"
    ]
   },
   {
@@ -487,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
