--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -89,14 +89,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
+   "id": "f779ab3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "OPENAI_API_KEY  = os.getenv('OPENAI_API_KEY')\n",
+    "model_2 = ChatOpenAI(model= \"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "#from langchain_community.llms import Ollama\n",
+    "from langchain_ollama import OllamaLLM\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = OllamaLLM(model=\"phi3\")"
    ]
   },
   {
@@ -111,8 +128,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
+   "execution_count": 3,
+   "id": "337baf50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Salva\\Anaconda3\\envs\\rag_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "import requests\n",
+    "import torch\n",
+    "from transformers import BlipProcessor, BlipForConditionalGeneration\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "import os\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "\n",
+    "HUGGINGFACEHUB_API_TOKEN = os.getenv('HUGGINGFACEHUB_API_TOKEN')\n",
+    "\n",
+    "# Load the model and processor \n",
+    "hf_model = \"Salesforce/blip-image-captioning-large\"\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "processor = BlipProcessor.from_pretrained(hf_model)\n",
+    "model = BlipForConditionalGeneration.from_pretrained(hf_model).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d84faeb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3d3a6e51",
    "metadata": {},
    "outputs": [
     {
@@ -120,61 +181,94 @@
      "output_type": "stream",
      "text": [
       "--\n",
-      "multiply\n",
-      "Multiply two numbers together.\n",
-      "{'x': {'title': 'X', 'type': 'number'}, 'y': {'title': 'Y', 'type': 'number'}}\n",
+      "image_caption\n",
+      "Given the URL of an image, download it and return a caption describing the image.\n",
+      "{'url': {'title': 'Url', 'type': 'string'}}\n",
       "--\n",
-      "add\n",
-      "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
+      "search_image\n",
+      "Search for an image on the web based on a query and return a URL.\n",
+      "{'query': {'title': 'Query', 'type': 'string'}}\n",
+      "--\n",
+      "seo_analysis\n",
+      "Analyze the SEO of a given URL and return basic SEO metrics.\n",
+      "{'url': {'title': 'Url', 'type': 'string'}}\n"
      ]
     }
    ],
    "source": [
-    "from langchain_core.tools import tool\n",
-    "\n",
-    "\n",
+    "# Image Captioning Tool\n",
     "@tool\n",
-    "def multiply(x: float, y: float) -> float:\n",
-    "    \"\"\"Multiply two numbers together.\"\"\"\n",
-    "    return x * y\n",
+    "def image_caption(url: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Given the URL of an image, download it and return a caption describing the image.\n",
+    "    \"\"\"\n",
+    "    try:\n",
     "\n",
     "\n",
+    "        # Download the image from the URL\n",
+    "        img = Image.open(requests.get(url, stream=True).raw).convert('RGB')\n",
+    "\n",
+    "        # Preprocess the image and generate caption\n",
+    "        inputs = processor(img, return_tensors=\"pt\").to(device)\n",
+    "        out = model.generate(**inputs, max_new_tokens=20)\n",
+    "        caption = processor.decode(out[0], skip_special_tokens=True)\n",
+    "\n",
+    "        return caption\n",
+    "    except Exception as e:\n",
+    "        return f\"Error generating caption: {str(e)}\"\n",
+    "\n",
+    "\n",
+    "# Image Search Tool\n",
     "@tool\n",
-    "def add(x: int, y: int) -> int:\n",
-    "    \"Add two numbers.\"\n",
-    "    return x + y\n",
+    "def search_image(query: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Search for an image on the web based on a query and return a URL.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        search_url = f\"https://google.com/image-search?q={query}\"\n",
+    "        response = requests.get(search_url)\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            return data.get(\"image_url\", \"No results found.\")\n",
+    "        else:\n",
+    "            return \"Failed to search for image.\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Error during image search: {str(e)}\"\n",
     "\n",
     "\n",
-    "tools = [multiply, add]\n",
+    "# SEO Analysis Tool\n",
+    "@tool\n",
+    "def seo_analysis(url: str) -> dict:\n",
+    "    \"\"\"\n",
+    "    Analyze the SEO of a given URL and return basic SEO metrics.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        if response.status_code == 200:\n",
+    "            # Basic SEO Analysis - Example\n",
+    "            html_content = response.text\n",
+    "            seo_metrics = {\n",
+    "                \"title\": html_content.split('<title>')[1].split('</title>')[0] if \"<title>\" in html_content else \"No title tag found\",\n",
+    "                \"meta_description\": html_content.split('name=\"description\" content=\"')[1].split('\"')[0] if 'name=\"description\" content=\"' in html_content else \"No meta description found\",\n",
+    "                \"h1_tags\": html_content.count('<h1>'),\n",
+    "                \"number_of_links\": html_content.count('<a href=')\n",
+    "            }\n",
+    "            return seo_metrics\n",
+    "        else:\n",
+    "            return {\"error\": \"Failed to retrieve the webpage.\"}\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": str(e)}\n",
     "\n",
-    "# Let's inspect the tools\n",
+    "\n",
+    "# Register the tools for the agent to use\n",
+    "tools = [image_caption, search_image, seo_analysis]\n",
+    "\n",
+    "# Inspect the tools for debugging\n",
     "for t in tools:\n",
     "    print(\"--\")\n",
     "    print(t.name)\n",
     "    print(t.description)\n",
-    "    print(t.args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "be77e780",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "multiply.invoke({\"x\": 4, \"y\": 5})"
+    "    print(t.args)\n"
    ]
   },
   {
@@ -189,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -197,8 +291,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
+      "image_caption(url: str) -> str - Given the URL of an image, download it and return a caption describing the image.\n",
+      "search_image(query: str) -> str - Search for an image on the web based on a query and return a URL.\n",
+      "seo_analysis(url: str) -> dict - Analyze the SEO of a given URL and return basic SEO metrics.\n"
      ]
     }
    ],
@@ -213,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,18 +342,17 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"search_image\",\n",
+      "  \"arguments\": {\n",
+      "    \"query\": \"dog\"\n",
+      "  }\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "chain = prompt | model\n",
-    "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
+    "chain = prompt | model_2\n",
+    "message = chain.invoke({\"input\": \"search image of a dog\"})\n",
     "\n",
     "# Let's take a look at the output from the model\n",
     "# if the model is an LLM (not a chat model), the output will be a string.\n",
@@ -280,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'search_image', 'arguments': {'query': 'dog'}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,8 +392,8 @@
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
-    "chain = prompt | model | JsonOutputParser()\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4\"})"
+    "chain = prompt | model_2 | JsonOutputParser()\n",
+    "chain.invoke({\"input\": \"image of a dog\"})"
    ]
   },
   {
@@ -330,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -377,27 +471,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "invoke_tool({\"name\": \"multiply\", \"arguments\": {\"x\": 3, \"y\": 5}})"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "715af6e1-935d-4bc0-a3d2-646ecf8a329b",
    "metadata": {},
@@ -409,24 +482,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "53.83784653"
+       "'there is a dog that is standing on a rock near a tree'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain = prompt | model_2 | JsonOutputParser() | invoke_tool\n",
+    "chain.invoke({\"input\": \"https://i.natgeofe.com/n/5d00b0cc-ab95-4522-ad13-7c65b7589e6b/NationalGeographic_748483.jpg?w=718&h=479\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fbbece9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'FAQ | thebarefooter',\n",
+       " 'meta_description': 'Why wear barefoot shoes? Are minimalist shoes good for me? Can barefoot shoes help with my bunions? All the barefoot and minimalist footwear burning questions are answered at The Barefooter FAQ. Come on in and ask any further questions.',\n",
+       " 'h1_tags': 0,\n",
+       " 'number_of_links': 1}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain = prompt | model_2 | JsonOutputParser() | invoke_tool\n",
+    "chain.invoke({\"input\": \"https://www.thebarefooter.com/faq\"})"
    ]
   },
   {
@@ -441,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +551,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +585,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rag_env",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
