--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -60,15 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
     "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = os.getenv('LANGCHAIN_API_KEY')"
    ]
   },
   {
@@ -89,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
-    "\n",
-    "model = Ollama(model=\"phi3\")"
+    "from langchain_openai import ChatOpenAI\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "model = ChatOpenAI(model=\"gpt-4o-mini\")"
    ]
   },
   {
@@ -111,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +178,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -246,13 +256,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```json\n",
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
+      "}\n",
+      "```\n"
      ]
     }
    ],
@@ -280,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +400,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +431,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +465,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +495,316 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0deb97f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--\n",
+      "celsius_to_fahrenheit\n",
+      "Convert Celsius to Fahrenheit.\n",
+      "{'celsius': {'title': 'Celsius'}}\n",
+      "--\n",
+      "kilometers_to_miles\n",
+      "Convert kilometers to miles.\n",
+      "{'kilometers': {'title': 'Kilometers'}}\n",
+      "--\n",
+      "euros_to_dollars\n",
+      "Convert Euros to US Dollars.\n",
+      "{'euros': {'title': 'Euros'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "# New tools\n",
+    "# Conversion tools\n",
+    "\n",
+    "@tool\n",
+    "def celsius_to_fahrenheit(celsius):\n",
+    "    try:\n",
+    "        return (float(celsius) * 9/5) + 32\n",
+    "    except (ValueError, TypeError) as e:\n",
+    "        raise ValueError(f\"Invalid input for Celsius to Fahrenheit conversion: {e}\")\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def kilometers_to_miles(kilometers):\n",
+    "    try:\n",
+    "        return float(kilometers) * 0.621371\n",
+    "    except (ValueError, TypeError) as e:\n",
+    "        raise ValueError(f\"Invalid input for Kilometers to Miles conversion: {e}\")\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def euros_to_dollars(euros, conversion_rate=1.08):\n",
+    "    try:\n",
+    "        return float(euros) * float(conversion_rate)\n",
+    "    except (ValueError, TypeError) as e:\n",
+    "        raise ValueError(f\"Invalid input for Euros to Dollars conversion: {e}\")\n",
+    "\n",
+    "\n",
+    "tools = [celsius_to_fahrenheit, kilometers_to_miles, euros_to_dollars]\n",
+    "\n",
+    "# Let's inspect the tools\n",
+    "for t in tools:\n",
+    "    print(\"--\")\n",
+    "    print(t.name)\n",
+    "    print(t.description)\n",
+    "    print(t.args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dd30bf3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euros_to_dollars.invoke({\"euros\": 50})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "baec07b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. Celsius to Fahrenheit\n",
+      "   - Name: celsius_to_fahrenheit\n",
+      "   - Description: Converts temperature from Celsius to Fahrenheit.\n",
+      "   - Arguments: \n",
+      "     - celsius: float\n",
+      "\n",
+      "2. Kilometers to Miles\n",
+      "   - Name: kilometers_to_miles\n",
+      "   - Description: Converts distance from kilometers to miles.\n",
+      "   - Arguments: \n",
+      "     - kilometers: float\n",
+      "\n",
+      "3. Euros to Dollars\n",
+      "   - Name: euros_to_dollars\n",
+      "   - Description: Converts amount from Euros to US Dollars.\n",
+      "   - Arguments: \n",
+      "     - euros: float\n",
+      "     - conversion_rate: float (default: 1.10)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tools descriptions\n",
+    "rendered_tools = \"\"\"\n",
+    "1. Celsius to Fahrenheit\n",
+    "   - Name: celsius_to_fahrenheit\n",
+    "   - Description: Converts temperature from Celsius to Fahrenheit.\n",
+    "   - Arguments: \n",
+    "     - celsius: float\n",
+    "\n",
+    "2. Kilometers to Miles\n",
+    "   - Name: kilometers_to_miles\n",
+    "   - Description: Converts distance from kilometers to miles.\n",
+    "   - Arguments: \n",
+    "     - kilometers: float\n",
+    "\n",
+    "3. Euros to Dollars\n",
+    "   - Name: euros_to_dollars\n",
+    "   - Description: Converts amount from Euros to US Dollars.\n",
+    "   - Arguments: \n",
+    "     - euros: float\n",
+    "     - conversion_rate: float (default: 1.10)\n",
+    "\"\"\"\n",
+    "print(rendered_tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "dc76b49a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = f\"\"\"\\\n",
+    "You are an assistant that has access to the following set of tools.\n",
+    "Here are the names and descriptions for each tool:\n",
+    "\n",
+    "{rendered_tools}\n",
+    "\n",
+    "Given the user input, return the name and input of the tool to use.\n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "\n",
+    "The `arguments` should be a dictionary, with keys corresponding\n",
+    "to the argument names and the values corresponding to the requested values.\n",
+    "\"\"\"\n",
+    "\n",
+    "def prompt(input_text):\n",
+    "    return input_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9baa8951",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(input_text):\n",
+    "    # Simulate a model response based on the system prompt\n",
+    "    if \"Celsius to Fahrenheit\" in input_text:\n",
+    "        response = {\n",
+    "            \"name\": \"celsius_to_fahrenheit\",\n",
+    "            \"arguments\": {\"celsius\": 25}\n",
+    "        }\n",
+    "    elif \"Kilometers to Miles\" in input_text:\n",
+    "        response = {\n",
+    "            \"name\": \"kilometers_to_miles\",\n",
+    "            \"arguments\": {\"kilometers\": 10}\n",
+    "        }\n",
+    "    elif \"Euros to Dollars\" in input_text:\n",
+    "        response = {\n",
+    "            \"name\": \"euros_to_dollars\",\n",
+    "            \"arguments\": {\"euros\": 50, \"conversion_rate\": 1.10}\n",
+    "        }\n",
+    "    else:\n",
+    "        response = {\"error\": \"Unknown operation\"}\n",
+    "    return json.dumps(response)\n",
+    "\n",
+    "def json_output_parser(model_response):\n",
+    "    try:\n",
+    "        return json.loads(model_response)\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        return {\"error\": f\"JSON parsing error: {e}\"}\n",
+    "\n",
+    "def invoke_tool(parsed_response):\n",
+    "    if \"error\" in parsed_response:\n",
+    "        return parsed_response[\"error\"]\n",
+    "    \n",
+    "    operation = parsed_response.get(\"name\")\n",
+    "    arguments = parsed_response.get(\"arguments\", {})\n",
+    "    \n",
+    "    try:\n",
+    "        if operation == \"celsius_to_fahrenheit\":\n",
+    "            result = celsius_to_fahrenheit(arguments[\"celsius\"])\n",
+    "        elif operation == \"kilometers_to_miles\":\n",
+    "            result = kilometers_to_miles(arguments[\"kilometers\"])\n",
+    "        elif operation == \"euros_to_dollars\":\n",
+    "            result = euros_to_dollars(arguments[\"euros\"], arguments.get(\"conversion_rate\", 1.10))\n",
+    "        else:\n",
+    "            result = \"Error: Unsupported operation\"\n",
+    "    except KeyError as e:\n",
+    "        result = f\"Error: Missing argument {e}\"\n",
+    "    except ValueError as e:\n",
+    "        result = f\"Error: {e}\"\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "63469461",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chain class\n",
+    "class Chain:\n",
+    "    def __init__(self, *steps):\n",
+    "        self.steps = steps\n",
+    "\n",
+    "    def invoke(self, input_data):\n",
+    "        data = input_data\n",
+    "        for step in self.steps:\n",
+    "            try:\n",
+    "                data = step(data)\n",
+    "                # Check if there's an error in the current step\n",
+    "                if isinstance(data, dict) and \"error\" in data:\n",
+    "                    # If error, ask model to correct the previous output\n",
+    "                    correction_prompt = f\"Error encountered: {data['error']}. Please correct the previous output.\"\n",
+    "                    data = model(correction_prompt)\n",
+    "                    data = json_output_parser(data)\n",
+    "            except Exception as e:\n",
+    "                # Catch any unexpected errors and ask model to correct the output\n",
+    "                correction_prompt = f\"Exception encountered: {e}. Please correct the previous output.\"\n",
+    "                data = model(correction_prompt)\n",
+    "                data = json_output_parser(data)\n",
+    "        return data\n",
+    "    \n",
+    "# Create the chain\n",
+    "chain = Chain(prompt, model, json_output_parser, invoke_tool)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d71fcc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for celsius_to_fahrenheit\n",
+      "  Input should be a valid dictionary or instance of celsius_to_fahrenheit [type=model_type, input_value=25, input_type=int]\n",
+      "    For further information visit https://errors.pydantic.dev/2.9/v/model_type\n",
+      "Error: 1 validation error for kilometers_to_miles\n",
+      "  Input should be a valid dictionary or instance of kilometers_to_miles [type=model_type, input_value=10, input_type=int]\n",
+      "    For further information visit https://errors.pydantic.dev/2.9/v/model_type\n",
+      "{'error': 'Unknown operation'}\n",
+      "Error: 1 validation error for celsius_to_fahrenheit\n",
+      "  Input should be a valid dictionary or instance of celsius_to_fahrenheit [type=model_type, input_value=25, input_type=int]\n",
+      "    For further information visit https://errors.pydantic.dev/2.9/v/model_type\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the chain\n",
+    "chain = Chain(prompt, model, json_output_parser, invoke_tool)\n",
+    "\n",
+    "# Example usage\n",
+    "input_data = \"Convert 25 Celsius to Fahrenheit\"\n",
+    "result = chain.invoke(input_data)\n",
+    "print(result)  \n",
+    "\n",
+    "input_data = \"Convert 10 Kilometers to Miles\"\n",
+    "result = chain.invoke(input_data)\n",
+    "print(result)  \n",
+    "\n",
+    "input_data = \"Convert 50 Euros to Dollars\"\n",
+    "result = chain.invoke(input_data)\n",
+    "print(result)  \n",
+    "\n",
+    "# Example with error handling\n",
+    "input_data = \"Convert 25 Celsius to Fahrenheit with a typo\"\n",
+    "result = chain.invoke(input_data)\n",
+    "print(result) "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
