--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -500,6 +500,193 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "461c49f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "\n",
+    "# Define the subtract tool\n",
+    "@tool\n",
+    "def subtract(x: int, y: int) -> int:\n",
+    "    \"\"\"Subtract two numbers.\"\"\"\n",
+    "    return x - y\n",
+    "\n",
+    "@tool\n",
+    "def divide(x: float, y: float) -> float:\n",
+    "    \"\"\"Divide two numbers.\"\"\"\n",
+    "    if y == 0:\n",
+    "        raise ValueError(\"Cannot divide by zero!\")\n",
+    "    return x / y\n",
+    "\n",
+    "@tool\n",
+    "def power(x: float, y: int) -> float:\n",
+    "    \"\"\"Raise x to the power of y.\"\"\"\n",
+    "    return x ** y\n",
+    "\n",
+    "# List the new tools\n",
+    "tools = [subtract, divide, power]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5d8f0008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subtract(x: int, y: int) -> int - Subtract two numbers.\n",
+      "divide(x: float, y: float) -> float - Divide two numbers.\n",
+      "power(x: float, y: int) -> float - Raise x to the power of y.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Render the description of the tools\n",
+    "from langchain_core.tools import render_text_description\n",
+    "rendered_tools = render_text_description(tools)\n",
+    "print(rendered_tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dd914d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\mehak\\AppData\\Local\\Temp\\ipykernel_11292\\2665789327.py:12: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "system_prompt = f\"\"\"\\ \n",
+    "You are an assistant that has access to the following set of tools. \n",
+    "Here are the names and descriptions for each tool:\n",
+    "\n",
+    "{rendered_tools}\n",
+    "\n",
+    "Given the user input, return the name and input of the tool to use. \n",
+    "Return your response as a JSON blob with 'name' and 'arguments' keys.\n",
+    "\n",
+    "The `arguments` should be a dictionary, with keys corresponding \n",
+    "to the argument names and the values corresponding to the requested values.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2f2eb88d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"system\", system_prompt), (\"user\", \"{input}\")]\n",
+    ")\n",
+    "\n",
+    "chain = prompt | model\n",
+    "\n",
+    "message = chain.invoke({\"input\": \"what's 5 minus 3\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2f514573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'divide', 'arguments': {'x': 10, 'y': 2}}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the JsonOutputParser\n",
+    "chain = prompt | model | JsonOutputParser()\n",
+    "\n",
+    "# Example: Testing the 'divide' operation\n",
+    "chain.invoke({\"input\": \"what's 10 divided by 2\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "89adf3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def invoke_tool(\n",
+    "    tool_call_request: ToolCallRequest, config: Optional[RunnableConfig] = None\n",
+    "):\n",
+    "    \"\"\"A function that we can use the perform a tool invocation.\"\"\"\n",
+    "    tool_name_to_tool = {tool.name: tool for tool in tools}\n",
+    "    name = tool_call_request[\"name\"]\n",
+    "    requested_tool = tool_name_to_tool[name]\n",
+    "    return requested_tool.invoke(tool_call_request[\"arguments\"], config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "52d1a87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'power', 'arguments': {'x': 2, 'y': 3}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    result = chain.invoke({\"input\": \"what's 2 to the power of 3\"})\n",
+    "    print(result)\n",
+    "except OutputParserException as e:\n",
+    "    print(f\"Output parsing error: {e}\")\n",
+    "    print(f\"Raw LLM output: {e.llm_output}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9ba251f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
+    "result = chain.invoke({\"input\": \"what's 2 to the power of 3\"})\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
