--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -589,10 +589,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "2f2eb88d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\\n  \"name\": \"subtcur\",\\n  \"arguments\": {\\n    \"x\": 5,\\n    \"y\": 3\\n  }\\n}\\n\\nIn this case, the user wants to subtract two numbers. The correct tool is `subtract`, and its arguments are clearly defined as x=5 and y=3 for subtraction of (5-3).'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [(\"system\", system_prompt), (\"user\", \"{input}\")]\n",
@@ -600,12 +611,12 @@
     "\n",
     "chain = prompt | model\n",
     "\n",
-    "message = chain.invoke({\"input\": \"what's 5 minus 3\"})"
+    "chain.invoke({\"input\": \"what's 5 minus 3\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "id": "2f514573",
    "metadata": {},
    "outputs": [
@@ -615,7 +626,7 @@
        "{'name': 'divide', 'arguments': {'x': 10, 'y': 2}}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "id": "89adf3aa",
    "metadata": {},
    "outputs": [],
@@ -647,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "id": "52d1a87f",
    "metadata": {},
    "outputs": [
@@ -670,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "id": "9ba251f4",
    "metadata": {},
    "outputs": [
