--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "!pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
